enhaning <nav>. Changes made: *Content aligned to center; *Bug fix and design enhancements; *Increased resolution support; *Changed font to 'Dancing script'; *Color pallete.

--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ header nav ul {
     left: 0;
     width: 100%;
     background-color: var(--nav-bg-color);
+    justify-content: center;
   }
 
   header nav ul.show {
